landing and about page built/styled

--- a/index.html
+++ b/index.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang='eng'>
 <head> 
-    <link rel="stylesheet" type="text/css" href="index.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+   <title>Droom</title>
+   <link rel='icon' href='resources\Icon1.png' type='image/png' sizes='16x16' >
+    <meta name="keywords" content="employment,employer, job, job finder">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Merriweather&display=swap" rel="stylesheet">
+    <link href="styles/css/index.css" rel="stylesheet">
+
 </head>
-<body>
-<header> 
-<img src="Droomtin.png">
-<nav>
-    <ul>
-        <a href=#>Home</a>
-        <a href=#>Home</a>
-        <a href=#>Home</a>
-        <a href=#>Home</a>
-    </ul>
-</nav>
-</header>
+<div class='container'>
+    <body>
+  <div class='header'>
+      <header>
+        <a href='index.html'><img src='resources\Droomtin.png' alt='Droom logo' class='logo'/></a>
+  <nav class='navlinks'>
+      <a href='index.html' class='grow'>Home</a>
+      <a href='about.html'class='grow'>About Us</a>
+      <a href='#'class='grow'>Log In</a>
+      <a href='contact'class='grow'>Contact Us</a>
+  </nav>
+  <img src='resources\Icon1.png' class='icon' alt='D icon'>
+  </header>
+    </div> <!--closes navbar div-->
+
+
+<div class="main">
+<h1>How do we work?</h1>
+<p> We match up our employees with employers who know what they want. simply sign up, complete your profile and upload your resume and we'll take care of the rest!</p>
+<p>Are you looking for a rockstar employee? Sign up and fill out your profile with your needs and we'll do the rest!</p>
+    <div class="card">
+<div class="employee">
+<img src='resources\construction.jpg' class='worker'>
+<h2>looking for work?</h2>
+<p>To get the hottest prospects sent straight to you simply sign up now!</p>
+<button>Get started!</button>
+    </div>
+    <div class="employer">
+<img src='resources\recruitment.jpg' class='boss'>
+<h2>Looking for employees?</h2>
+<p>Get in touch with your future rockstar employee by signing up!</p>
+<button class='signup'>Get started!</button>
+    </div>
+</div> <!-- closes card-->
+</div>
+<div class='footer'>
+    <footer>
+        <a href='index.html'><img src='resources\Droomtin.png' alt='Droom logo' class='logo'></a>
+  <nav class='navlinks'>
+    <a href='index.html' class='grow'>Home</a>
+    <a href='about.html' class='grow'>About Us</a>
+    <a href='#' class='grow'>Log In</a>
+    <a href='contact' class='grow'>Contact Us</a>
+  </nav>
+  <img src='resources\Icon1.png' class='icon' alt='D icon'>
+  </footer>
+  </div> <!--closes navbar div-->
 </body>
-</body>
+</div> <!-- closes body container-->
 </html>
