links added to sign up/log in forms

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
   
     <a href='index.html' class='grow'>Home</a>
     <a href='about.html'class='grow'>About Us</a>
-    <a href='#' calss='grow'>Log In</a>
-    <a href='contact' class='grow'>Contact Us</a>
+    <a href='https://boring-ardinghelli-c591c1.netlify.com/signin' class='grow'>Sign In</a>
+    <a href='#' class='grow'>Contact Us</a>
   
 </nav>
 <img src='resources\Icon1.png' class='icon' alt='D icon'>
@@ -30,7 +30,7 @@
 
     <h2>Our Mission:</h2>
     <p>At Droom our mission is simple, we're hooking up the hottest prospects with even hotter job leads. In a fast moving world, dont be left behind! Join with us and live your Droom.</p>
-    <button>Join today!</button>
+    <button><a href='https://boring-ardinghelli-c591c1.netlify.com/signup'>Join today!</a></button>
   </div>
   
   <div class='sectionslide'>
@@ -157,7 +157,7 @@
 <nav class='navlinks'>
   <a href='index.html' class='grow'>Home</a>
   <a href='about.html'class='grow'>About Us</a>
-  <a href='#' class='grow'>Log In</a>
+  <a href='https://boring-ardinghelli-c591c1.netlify.com/signin' class='grow'>Log In</a>
   <a href='contact'class='grow'>Contact Us</a>
 </nav>
 <img src='resources\Icon1.png' class='icon' alt='D icon'>
