--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav class='navlinks'>
       <a href='index.html' class='grow'>Home</a>
       <a href='about.html'class='grow'>About Us</a>
-      <a href='#'class='grow'>Log In</a>
+      <a href='https://boring-ardinghelli-c591c1.netlify.com/signin'class='grow'>Sign In</a>
       <a href='contact'class='grow'>Contact Us</a>
   </nav>
   <img src='resources\Icon1.png' class='icon' alt='D icon'>
@@ -35,13 +35,13 @@
 <img src='resources\construction.jpg' class='worker'>
 <h2>looking for work?</h2>
 <p>To get the hottest prospects sent straight to you simply sign up now!</p>
-<button>Get started!</button>
+<button><a href='https://boring-ardinghelli-c591c1.netlify.com/signup'>Get started!</a></button>
     </div>
     <div class="employer">
 <img src='resources\recruitment.jpg' class='boss'>
 <h2>Looking for employees?</h2>
 <p>Get in touch with your future rockstar employee by signing up!</p>
-<button class='signup'>Get started!</button>
+<button class='signup'><a href='https://boring-ardinghelli-c591c1.netlify.com/signup'>Get started!</a></button>
     </div>
 </div> <!-- closes card-->
 </div>
@@ -51,7 +51,7 @@
   <nav class='navlinks'>
     <a href='index.html' class='grow'>Home</a>
     <a href='about.html' class='grow'>About Us</a>
-    <a href='#' class='grow'>Log In</a>
+    <a href='https://boring-ardinghelli-c591c1.netlify.com/signin' class='grow'>Sign In</a>
     <a href='contact' class='grow'>Contact Us</a>
   </nav>
   <img src='resources\Icon1.png' class='icon' alt='D icon'>
