Finalized updated login buttons

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <p class="lasta">lectus quam id. Egestas sed tempus urna et pharetra pharetra massa massa. Cras fermentum odio eu feugiat pretium nibh ipsum. Odio facilisis mauris sit amet massa. Integer eget aliquet nibh praesent tristique. Sed blandit libero volutpat sed cras ornare arcu dui. Pellentesque pulvinar pellentesque habitant morbi tristique. Vitae aliquet nec ullamcorper sit amet risus nullam. Urna neque.</p>
     
       <div class="button">
-       <a class="dec" href="#"> Sign Up</a>
+       <a class="dec" href="https://boring-ardinghelli-c591c1.netlify.com/signup"> Sign Up</a>
       </div>
       <div class="button2">
-        <a class="dec" href="#"> Sign In</a>
+        <a class="dec" href="https://boring-ardinghelli-c591c1.netlify.com/signin"> Sign In</a>
        </div>
     </div>
     
