--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
- lang="en">
+<html lang="en">
 <head>
 <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Merriweather&display=swap" rel="stylesheet"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
